<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="in.sayes.nestorapp.signup.activity.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">


    <!-- Old Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.typeface.custom.views.RobotoEditText
            android:id="@+id/edttxtOldPawd"
            style="@style/styleEditTextSignUp"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <!-- New Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.typeface.custom.views.RobotoEditText
            android:id="@+id/edttxtNewPwd"
            style="@style/styleEditTextSignUp"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <!--  Confirm Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.typeface.custom.views.RobotoEditText
            android:id="@+id/edttxtConfirmPwd"
            style="@style/styleEditTextSignUp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <!-- Reset Password -->
    <com.typeface.custom.views.RobotoButton
        android:id="@+id/btnResetPassword"
        style="@style/styleButton"
        android:ems="15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/reset_password" />

</LinearLayout>
