<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".signup.activity.OTPActivity"
    tools:showIn="@layout/activity_otp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <com.typeface.custom.views.RobotoEditText
            android:id="@+id/edttxtOTP"
            style="@style/styleEditTextSignUp"
            android:hint="@string/confirmation_code"
            android:inputType="number"
            android:maxLength="6" />
    </android.support.design.widget.TextInputLayout>

    <com.typeface.custom.views.RobotoButton
        android:id="@+id/btnSendCode"
        style="@style/styleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="15"
        android:text="@string/login" />


    <com.typeface.custom.views.RobotoTextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/resend_code"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/snap_pea"
        android:textSize="16sp" />


</LinearLayout>

